# learnOpenGL

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  main.c  main.cpp  to compile
include/camera/: camera.cpp  camera.hpp
include/glad/: glad.c  glad.h
include/helpers/: sceneTree.hpp
include/matrixMath/: matrix_vector_math.c  matrix_vector_math.h
include/mesh/: mesh.hpp
include/model/: model.cpp  model.hpp
include/model/mesh/: mesh.cpp  mesh.hpp
include/shaders/: shader.c  shader.cpp  shader.h  shader.hpp
localData/: saveData.sv
resources/models/: champion.blend  champion.fbx  testCube - Copy.fbx
resources/shaders/: lightContainer_vertex.glsl  litObject_fragment.glsl  litObject_vertex.glsl  missingShader_fragment.glsl  objectLighting_fragment.glsl
